// SiamIT Project Database Schema
// Use DBML to define your database structure
// Docs: https://dbml.dbdiagram.io/docs

Table process_check {
  id varchar(36) [primary key, note: 'UUID generated']
  Email varchar [unique, note: 'User email for authentication']
  Password varchar [note: 'Hashed password']
  Token varchar [note: 'Authentication token']
  Role varchar [default: 'user', note: 'User role: user, admin, superadmin']
  Repid varchar(36) [note: 'Reference ID linking to user/admin/superadmin']
  avatar_url varchar [note: 'User avatar image URL']
  lineUserId varchar [unique, note: 'LINE user ID for LINE login integration']
}

Table users {
  id varchar(36) [primary key, note: 'UUID generated']
  User_name varchar [unique, note: 'Employee username']
  department varchar [note: 'Employee department']
  position varchar [note: 'Employee position']
  gender varchar [note: 'Employee gender']
  dob date [note: 'Date of birth']
  phone_number varchar [note: 'Contact phone number']
  start_work date [note: 'Employment start date']
  end_work date [note: 'Employment end date']
}

Table admin {
  id varchar(36) [primary key, note: 'UUID generated']
  admin_name varchar [unique, note: 'Admin username']
  department varchar [note: 'Admin department']
  position varchar [note: 'Admin position']
  gender varchar [note: 'Admin gender']
  dob date [note: 'Date of birth']
  phone_number varchar [note: 'Contact phone number']
  start_work date [note: 'Employment start date']
  end_work date [note: 'Employment end date']
}

Table superadmin {
  id varchar(36) [primary key, note: 'UUID generated']
  superadmin_name varchar [unique, note: 'Super admin username']
  department varchar [note: 'Super admin department']
  position varchar [note: 'Super admin position']
  gender varchar [note: 'Super admin gender']
  dob date [note: 'Date of birth']
  phone_number varchar [note: 'Contact phone number']
  start_work date [note: 'Employment start date']
  end_work date [note: 'Employment end date']
}

Table department {
  id varchar(36) [primary key, note: 'UUID generated']
  department_name_en varchar [note: 'Department name in English']
  department_name_th varchar [note: 'Department name in Thai']
}

Table position {
  id varchar(36) [primary key, note: 'UUID generated']
  position_name_en varchar [note: 'Position name in English']
  position_name_th varchar [note: 'Position name in Thai']
  new_year_quota boolean [default: false, note: 'Whether position gets new year quota']
}

Table leave_type {
  id varchar(36) [primary key, note: 'UUID generated']
  leave_type_en varchar [note: 'Leave type name in English']
  leave_type_th varchar [note: 'Leave type name in Thai']
  require_attachment boolean [default: false, note: 'Whether leave type requires attachments']
}

Table leave_quota {
  id varchar(36) [primary key, note: 'UUID generated']
  positionId varchar [not null, note: 'Reference to position']
  leaveTypeId varchar [not null, note: 'Reference to leave type']
  quota int [default: 0, note: 'Number of leave days allocated']
}

Table leave_request {
  id varchar(36) [primary key, note: 'UUID generated']
  Repid varchar [note: 'Reference to process_check for approval workflow']
  employeeType varchar [note: 'Type of employee: user, admin, superadmin']
  leaveType varchar [note: 'Type of leave requested']
  startDate date [note: 'Leave start date']
  endDate date [note: 'Leave end date']
  startTime varchar [note: 'Leave start time for partial day']
  endTime varchar [note: 'Leave end time for partial day']
  days decimal(10,2) [note: 'Number of days requested']
  durationType varchar [note: 'Duration type: day or hour']
  durationHours decimal(10,2) [note: 'Number of hours requested']
  reason text [note: 'Reason for leave request']
  rejectedReason text [note: 'Reason for rejection if applicable']
  contact varchar [note: 'Emergency contact information']
  createdAt timestamp [note: 'Request creation timestamp']
  statusChangeTime timestamp [note: 'Last status change timestamp']
  status varchar [note: 'Request status: pending, approved, rejected']
  statusBy varchar [note: 'ID of admin who processed the request']
  approvedTime timestamp [note: 'Approval timestamp']
  rejectedTime timestamp [note: 'Rejection timestamp']
  attachments longtext [note: 'JSON array of attached file names']
  isRead boolean [default: false, note: 'Whether request has been read']
  backdated boolean [default: false, note: 'Whether request is backdated']
}

Table leave_used {
  id varchar(36) [primary key, note: 'UUID generated']
  user_id varchar(36) [not null, note: 'Reference to user']
  leave_type varchar [not null, note: 'Type of leave used']
  days int [default: 0, note: 'Number of days used']
  hour int [default: 0, note: 'Number of hours used']
  created_at timestamp [default: `CURRENT_TIMESTAMP`, note: 'Record creation timestamp']
  updated_at timestamp [default: `CURRENT_TIMESTAMP`, note: 'Record update timestamp']
}

Table announcements {
  id varchar(36) [primary key, note: 'UUID generated']
  subject varchar [note: 'Announcement subject/title']
  detail text [note: 'Announcement content']
  Image varchar [note: 'Announcement image URL']
  createdBy varchar [note: 'ID of user who created announcement']
  createdAt timestamp [note: 'Announcement creation timestamp']
}

Table custom_holiday {
  id varchar(36) [primary key, note: 'UUID generated']
  title varchar [note: 'Holiday title']
  description varchar [note: 'Holiday description']
  date varchar [note: 'Holiday date']
  createdAt timestamp [note: 'Record creation timestamp']
  createdBy varchar [note: 'ID of user who created holiday']
  type varchar(20) [default: 'company', note: 'Holiday type: company, national, etc.']
}

// Relationships

// Process check relationships (authentication and authorization)
Ref: process_check.Repid > users.id
Ref: process_check.Repid > admin.id  
Ref: process_check.Repid > superadmin.id

// Leave request relationships
Ref: leave_request.Repid > process_check.id
Ref: leave_request.statusBy > admin.id
Ref: leave_request.statusBy > superadmin.id

// Leave quota relationships
Ref: leave_quota.positionId > position.id
Ref: leave_quota.leaveTypeId > leave_type.id

// Leave used relationships
Ref: leave_used.user_id > users.id
Ref: leave_used.user_id > admin.id
Ref: leave_used.user_id > superadmin.id

// Announcement relationships
Ref: announcements.createdBy > users.id
Ref: announcements.createdBy > admin.id
Ref: announcements.createdBy > superadmin.id

// Custom holiday relationships
Ref: custom_holiday.createdBy > users.id
Ref: custom_holiday.createdBy > admin.id
Ref: custom_holiday.createdBy > superadmin.id

Ref: department.id > users.department
Ref: department.id > admin.department
Ref: department.id > superadmin.department

Ref: position.id > users.position
Ref: position.id > admin.position
Ref: position.id > superadmin.position

Ref: leave_type.id > leave_request.leaveType
Ref: leave_type.id > leave_used.leave_type